--- a/projet/projet.csproj
+++ b/projet/projet.csproj
@@ -47,6 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="dbddDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>dbddDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="login page.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +102,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="dbddDataSet.xsc">
+      <DependentUpon>dbddDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="dbddDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>dbddDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="dbddDataSet.xss">
+      <DependentUpon>dbddDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
